--- a/app/src/main/res/layout-large/activity_profile_image.xml
+++ b/app/src/main/res/layout-large/activity_profile_image.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center"/>
     </RelativeLayout>
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
