--- a/app/src/main/res/layout-large/fragment_register_choose_password.xml
+++ b/app/src/main/res/layout-large/fragment_register_choose_password.xml
@@ -22,7 +22,7 @@
                 android:layout_gravity="center"/>
         </LinearLayout>
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
             android:id="@+id/register_password_page_username_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             android:layout_marginBottom="20dp"
             android:gravity="center"/>
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
