--- a/app/src/main/res/layout-large/fragment_register_choose_user_name.xml
+++ b/app/src/main/res/layout-large/fragment_register_choose_user_name.xml
@@ -23,7 +23,7 @@
                 android:src="@drawable/char_m_40"/>
         </LinearLayout>
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
