--- a/app/src/main/res/layout/fragment_register_choose_password.xml
+++ b/app/src/main/res/layout/fragment_register_choose_password.xml
@@ -23,7 +23,7 @@
             android:tag="@drawable/char_m_40" />
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
         android:id="@+id/register_password_page_username_text_view"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -36,7 +36,7 @@
         android:textColor="@color/colorA17"
         android:textSize="@dimen/register_texts_font_size" />
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginLeft="16dp"
@@ -79,7 +79,7 @@
         android:background="@drawable/ranking_page_buttons_shape"
         android:onClick="onChoosePasswordClicked" />
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginLeft="21dp"
