--- a/app/src/main/res/layout/fragment_register_sign_in_orlog_in.xml
+++ b/app/src/main/res/layout/fragment_register_sign_in_orlog_in.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="605dp"
         android:background="@drawable/ranking_page_buttons_shape"
         android:onClick="onFirstSignInClicked"/>
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:text="@string/sign_in_button"
@@ -27,7 +27,7 @@
         android:layout_marginLeft="213dp"
         android:background="@drawable/ranking_page_buttons_shape"
         android:onClick="onSecondSignInClicked"/>
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:text="@string/log_in_button"
