--- a/app/src/main/res/layout-large/activity_game.xml
+++ b/app/src/main/res/layout-large/activity_game.xml
@@ -43,7 +43,7 @@
                 android:gravity="right"
                 android:orientation="vertical">
 
-                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+                <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -58,7 +58,7 @@
                     android:gravity="right"
                     android:orientation="horizontal">
 
-                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+                    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -67,7 +67,7 @@
                         android:textDirection="rtl"
                         android:textSize="15sp" />
 
-                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+                    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -99,7 +99,7 @@
                 android:gravity="right"
                 android:orientation="vertical">
 
-                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+                <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -114,7 +114,7 @@
                     android:gravity="right"
                     android:orientation="horizontal">
 
-                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+                    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -123,7 +123,7 @@
                         android:textDirection="rtl"
                         android:textSize="15sp" />
 
-                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+                    <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -158,7 +158,7 @@
         android:layout_height="wrap_content"
         android:gravity="center">
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="توضیح کلمه: در طبیعت یافت میشه."
@@ -175,7 +175,7 @@
         android:backgroundTint="@color/colorA4"
         android:gravity="center">
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="سوال قبلی"
@@ -189,7 +189,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp">
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="صورت سوال؟"
@@ -217,7 +217,7 @@
             android:background="@drawable/btn_circle"
             android:gravity="center">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="بپرس"
