--- a/app/src/main/res/layout-large/activity_trophy_page.xml
+++ b/app/src/main/res/layout-large/activity_trophy_page.xml
@@ -18,7 +18,7 @@
         android:src="@drawable/trophy"
         android:scaleType="centerInside"/>
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
