--- a/app/src/main/res/layout-large/fragment_buy_coins.xml
+++ b/app/src/main/res/layout-large/fragment_buy_coins.xml
@@ -34,7 +34,7 @@
                     android:layout_width="20dp"
                     android:layout_height="match_parent" />
 
-                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+                <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -54,7 +54,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+                <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -102,7 +102,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -122,7 +122,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -170,7 +170,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -190,7 +190,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -238,7 +238,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -258,7 +258,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -306,7 +306,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -326,7 +326,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
