--- a/app/src/main/res/layout-large/trophy_page_recycler_cardview_template.xml
+++ b/app/src/main/res/layout-large/trophy_page_recycler_cardview_template.xml
@@ -27,7 +27,7 @@
             android:background="@color/colorA17"
             app:cardCornerRadius="10dp">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
                 android:id="@+id/trophy_page_recycler_inner_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
