--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -23,7 +23,7 @@
 
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="82dp"
         android:layout_height="36dp"
         android:layout_marginLeft="78dp"
@@ -34,7 +34,7 @@
         android:textColor="@color/colorA17"
         android:textSize="@dimen/text_size_small" />
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="41dp"
         android:layout_height="20dp"
         android:layout_marginLeft="119dp"
@@ -42,7 +42,7 @@
         android:text="امتیاز"
         android:textColor="@color/colorA17" />
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="82dp"
         android:layout_height="28dp"
         android:layout_marginLeft="240dp"
@@ -68,7 +68,7 @@
 
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="350dp"
         android:layout_height="30dp"
         android:layout_marginLeft="30.5dp"
@@ -80,7 +80,7 @@
         android:textAlignment="center"
         android:textSize="@dimen/text_size_medium" />
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="350dp"
         android:layout_height="30dp"
         android:layout_marginLeft="30.5dp"
@@ -92,7 +92,7 @@
         android:textAlignment="center"
         android:textSize="@dimen/text_size_medium" />
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="350dp"
         android:layout_height="30dp"
         android:layout_marginLeft="30.5dp"
@@ -111,7 +111,7 @@
         android:background="@drawable/btn_circle"
         android:backgroundTint="@color/colorA13">
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithAfsanehFont
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
