--- a/app/src/main/res/layout/activity_trophy_page.xml
+++ b/app/src/main/res/layout/activity_trophy_page.xml
@@ -14,7 +14,7 @@
         android:src="@drawable/trophy"
         android:scaleType="centerInside"/>
 
-    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:gravity="center"
