--- a/app/src/main/res/layout/find_rival_cardview_template.xml
+++ b/app/src/main/res/layout/find_rival_cardview_template.xml
@@ -19,7 +19,7 @@
             android:elevation="0dp"
             app:cardCornerRadius="10dp">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:id="@+id/find_rival_card_template_text"
                 android:layout_width="283dp"
                 android:layout_height="30dp"
