--- a/app/src/main/res/layout/fragment_new_game.xml
+++ b/app/src/main/res/layout/fragment_new_game.xml
@@ -16,7 +16,7 @@
         android:layout_height="531dp"
         android:background="@drawable/btn_shape"
         android:backgroundTint="@color/colorA1"
-        android:onClick="check">
+        android:onClick="doNothing">
         
         <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
             android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             android:backgroundTint="@color/colorPrimary"
             android:gravity="center">
 
-            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="انتخاب کن"
@@ -39,9 +39,29 @@
 
         <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="245dp">
+            android:layout_height="245dp"
+            android:layout_marginTop="31dp"
+            android:onClick="onOnline">
 
         </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
+
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginTop="276dp"
+            android:background="@color/colorA15">
+
+        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="245dp"
+            android:layout_marginTop="286dp"
+            android:onClick="onOffline">
+
+        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
 
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
 
