--- a/app/src/main/res/layout/trophy_page_recycler_cardview_template.xml
+++ b/app/src/main/res/layout/trophy_page_recycler_cardview_template.xml
@@ -19,7 +19,7 @@
         android:elevation="0dp"
         app:cardCornerRadius="10dp">
 
-        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.Custom.AutoResizeTextViewWithIrsansFont
             android:id="@+id/trophy_page_recycler_inner_textview"
             android:layout_width="283dp"
             android:layout_height="30dp"
